Fixed message of alert being the wrong color

--- a/src/style.css
+++ b/src/style.css
@@ -112,7 +112,7 @@ video{
 #installation_started_text{
     font-family: sans-serif;
     font-size: 33px;
-    color: #000;
+    color: #fff;
     position: fixed;
     z-index: 1000;
     top: 325;
